--- a/app/views/header/_header.html.erb
+++ b/app/views/header/_header.html.erb
@@ -6,6 +6,7 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-3 mb-md-0">
             <button type="button" class="btn btn-outline-light me-2 text-bg-dark"><%= link_to "Курсы", home_path, class: 'nav-link px-2 text-white' %></button>
              <% if user_signed_in? %>
+                  <button type="button" class="btn btn-outline-light me-2 text-bg-dark"><%= link_to "Рейтинг", rate_path, class: 'nav-link px-2 text-white' %></button>
                   <li class="nav-item dropdown mr-auto btn btn-outline-light me-2 text-bg-dark">
                     <a class="nav-link dropdown-toggle nav-link px-2 text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Аккаунт
@@ -16,7 +17,8 @@
                       <li><%= button_to "Выйти", session_path, method: :delete, class: "nav-link px-2 text-white dropdown-item btn btn-lg", id: 'ex_btn'%></li>
                       </ul>
             <% else %>
-            <button type="button" class="btn btn-outline-light me-2 text-bg-dark"><%= link_to "Войти как сотрудник", login_path, class: 'nav-link px-2 text-white' %></button>
+            <button type="button" class="btn btn-outline-light me-2 text-bg-dark"><%= link_to "Войти как наставник", login_path(param: 1), class: 'nav-link px-2 text-white' %></button>
+            <button type="button" class="btn btn-outline-light me-2 text-bg-dark"><%= link_to "Войти как сотрудник", login_path(param: 0), class: 'nav-link px-2 text-white' %></button>
             <button type="button" class="btn btn-outline-light me-2 text-bg-dark"><%= link_to "Зарегистрироваться", new_user_path, class: 'nav-link px-2 text-white' %></button>
             <% end %>
         </ul>
