--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,3 +1,6 @@
+<% if current_user.role == 1%> 
+<button type="button" class="btn btn-outline-light me-2 text-bg-dark"><%= link_to "Скачать PDF", down_path, class: 'nav-link px-2 text-white' %></button>
+<%end%>
 <table class="table">
   <thead>
     <tr>
