--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -33,7 +33,7 @@
 </div>
 <% end %>
 <%end%>
-<%if current_user.role == 1%>
+<%if current_user.role == 1 || current_user.role == 2%>
 <div class="container">
     <div class="row">
         <div class='col-auto'>
