--- a/app/views/courses/_create_course.html.erb
+++ b/app/views/courses/_create_course.html.erb
@@ -7,6 +7,12 @@
   <p><%= form.text_field :part_sc, class: 'form-control', id: 'question'%>
   <p><%= form.label :main, "Введите основную мысль" %></p>
   <p><%= form.text_field :main, class: 'form-control', id: 'mark'%>
+    <p><%= form.label :avatar, "Добавьте аватар" %></p>
+  <p><%= form.file_field :avatar %>
+  <p><%= form.label :pictures, "Добавьте фотографии" %></p>
+  <p><%= form.file_field :pictures, multiple: true%>
+    <p><%= form.label :file, "Добавьте видео" %></p>
+  <p><%= form.file_field :file %>
   <p><%= form.submit("Добавить", id: 'btn') %></p>
 <% end %>
 </div>
