--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,6 +5,8 @@
       </div>
   </div>
 </div>
+<%if current_user != nil%>
+<% if current_user.role == 2%>
 <div class="container">
     <div class="row">
         <div class='col-auto'>
@@ -16,10 +18,15 @@
         </div>
     </div>
 </div>
+<%end%>
+<%end%>
 <h1>Courses#index</h1>
 <p>Find me in app/views/courses/index.html.erb</p>
 <% @courses.each do |course| %>
 <%= course.title %>
+<% if course.avatar.attached? %>
+<%= image_tag(course.avatar, style:"width:150px; height:150px")%>
+<%end%>
 <div class="container">
               <div class="row">
                   <div class='col-auto'>
