--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,71 @@
  *= require_tree .
  *= require_self
  */
+
+/*Секция с курсами*/
+.course__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+}
+.course__item {
+    min-width: 400px;
+    min-height: 300px;
+    border: 2px solid #f2f3f6;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    position: relative;
+    padding: 25px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 50px -10px rgba(0, 0, 0, 0.2);
+}
+.course__categories {
+    font-size: .7rem;
+}
+.category {
+    color: #9283e6;
+    border: 1px solid #9283e6;
+    border-radius: 5px;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    margin-right: 20px;
+}
+.course__free {
+    background-color: #ea922c;
+    text-transform: uppercase;
+    border-radius: 5px;
+    color: #ffffff;
+    padding: 10px 20px;
+}
+.course__info {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    font-size: 1.2rem;
+}
+.course__title {
+    font-weight: 700;
+}
+.course__price {
+    color: #ea922c;
+}
+.ruble {
+    font-weight: 700;
+}
+.course__avatar {
+    display: flex;
+    justify-content: right;
+}
+.course__additional {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.course__additionals {
+    font-size: .8rem;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: #828285;
+}
