--- a/app/views/header/_header.html.erb
+++ b/app/views/header/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom header">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-        <span class="fs-4"><strong><span class='white' id='home'>Bmw</span></strong></span>
+        <span class="fs-4"><strong><span class='white' id='home'>BMW Education</span></strong></span>
       <div class='text-right'>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-3 mb-md-0">
             <button type="button" class="btn btn-outline-light me-2 text-bg-dark"><%= link_to "Курсы", home_path, class: 'nav-link px-2 text-white' %></button>
