--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,7 +12,7 @@
   <p><%= form.password_field :password, class: 'form-control', id: 'pass' %></p>
   <p><%= form.label :password_confirmation, "Повторите пароль" %></p>
   <p><%= form.password_field :password_confirmation, class: 'form-control', id: 'pass_conf' %></p>
-  <p><%= form.submit("Зарегистрироваться", id: 'btn') %></p>
+  <p><%= form.submit("Зарегистрироваться", id: 'btn', class: "btn btn-outline-light me-2 text-bg-dark") %></p>
 <% end %>
 
 <div id='error_response-container'></div>
