--- a/app/views/courses/_create_course.html.erb
+++ b/app/views/courses/_create_course.html.erb
@@ -1,18 +1,10 @@
 <%= form_with url: "/courses/create", method: :post do |form| %>
   <p><%= form.label :title, "Введите название курса" %></p>
   <p><%= form.text_field :title, class: 'form-control', id: 'question'%>
-  <p><%= form.label :part_fr, "Введите описание над видео" %></p>
-  <p><%= form.text_field :part_fr, class: 'form-control', id: 'question'%>
-    <p><%= form.label :part_sc, "Введите описание под видео" %></p>
-  <p><%= form.text_field :part_sc, class: 'form-control', id: 'question'%>
-  <p><%= form.label :main, "Введите основную мысль" %></p>
-  <p><%= form.text_field :main, class: 'form-control', id: 'mark'%>
+  <p><%= form.label :description, "Введите описание курса" %></p>
+  <p><%= form.text_field :description, class: 'form-control', id: 'question'%>
     <p><%= form.label :avatar, "Добавьте аватар" %></p>
   <p><%= form.file_field :avatar %>
-  <p><%= form.label :pictures, "Добавьте фотографии" %></p>
-  <p><%= form.file_field :pictures, multiple: true%>
-    <p><%= form.label :file, "Добавьте видео" %></p>
-  <p><%= form.file_field :file %>
   <p><%= form.submit("Добавить", id: 'btn') %></p>
 <% end %>
 </div>
