--- a/app/views/courses/_create_course.html.erb
+++ b/app/views/courses/_create_course.html.erb
@@ -5,7 +5,7 @@
   <p><%= form.text_field :description, class: 'form-control', id: 'question'%>
     <p><%= form.label :avatar, "Добавьте аватар" %></p>
   <p><%= form.file_field :avatar %>
-  <p><%= form.submit("Добавить", id: 'btn') %></p>
+  <p><%= form.submit("Добавить", class: "btn btn-outline-light me-2 text-bg-dark") %></p>
 <% end %>
 </div>
 <div class="modal-footer">
