--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -26,7 +26,7 @@
     <div class="course__item">
       <div class="course__categories">
         <span class="category"><%=course.title[0..55]%></span>
-        <span class="course__free">Бесплатно</span>
+        <span class="course__free">Важный</span>
       </div>
       <div class="course__info">
         <div class="course__title"><%= course.title%></div>
