--- a/app/views/lessons/_les_form.html.erb
+++ b/app/views/lessons/_les_form.html.erb
@@ -11,7 +11,7 @@
   <p><%= form.file_field :pictures, multiple: true%>
     <p><%= form.label :file, "Добавьте видео" %></p>
   <p><%= form.file_field :file %>
-  <p><%= form.submit("Добавить", id: 'btn') %></p>
+  <p><%= form.submit("Добавить", class: "btn btn-outline-light me-2 text-bg-dark") %></p>
 <% end %>
 </div>
 <div class="modal-footer">
