--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,8 @@
   <p><%= form.text_field :first_name, placeholder: 'Имя', class: 'form-control', id: 'first_name' %></p>
   <p><%= form.label :second_name, "Введите фамилию" %></p>
   <p><%= form.text_field :second_name, placeholder: 'Фамилия', class: 'form-control', id: 'second_name'%></p>
+  <p><%= form.label :patronymic, "Введите отчество" %></p>
+  <p><%= form.text_field :patronymic, placeholder: 'Отчество', class: 'form-control', id: 'second_name'%></p>
   <p><%= form.label :phone, "Введите номер телефона"%></p>
   <p><%= form.text_field :phone, class: 'form-control', id: 'phone' %></p>
   <p><%= form.label :password, "Введите пароль" %></p>
