--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,9 +1,11 @@
-<h1>ПРОФИЛЬ</h1>
-<%= current_user.first_name%> <%= current_user.second_name%>
+<div class = "def_text"><h1>Личный кабинет</h1></div>
+<div class = "move_left"><h1><%= current_user.second_name%> <%= current_user.first_name%> <%= current_user.patronymic%><h1></div>
+<div class = "btn-container">
  <ul class="nav col-12 col-lg-auto me-lg-auto mb-3 mb-md-0">
-            <%= button_to "Текущие курсы", my_courses_path(param: 0), class: "btn btn-outline-light me-2 text-bg-dark" %></button>
+           <%= button_to "Текущие курсы", my_courses_path(param: 0), class: "btn btn-outline-light me-2 text-bg-dark" %></button>
             <%= button_to "Пройденные курсы", my_courses_path(param: 1), class: "btn btn-outline-light me-2 text-bg-dark" %></button>
+            <%=button_to "Редактировать профиль",  edit_user_path(current_user), method: :get, class: "btn btn-outline-light me-2 text-bg-dark" %></button>
         </ul>
+</div>
 <div id='courses'></div>
 
-<%=link_to "Редактировать профиль",  edit_user_path(current_user), class: "nav-link px-2", type: "button"%>
