--- a/app/views/courses/_remove_user_page.html.erb
+++ b/app/views/courses/_remove_user_page.html.erb
@@ -1,7 +1,7 @@
 <%= form_with url: "/courses/removing_from_course/#{course.id}", method: :post do |form| %>
   <p><%= form.label :user_id, "Выберите сотрудника" %></p>
-  <%= form.select :user_id, @users.map {|el| ["#{el.first_name} #{el.second_name}", el.id]} %>
-  <p><%= form.submit("Убрать", id: 'btn') %></p>
+  <p><%= form.select :user_id, @users.map {|el| ["#{el.first_name} #{el.second_name}", el.id]} %>
+  <p><%= form.submit("Убрать", class: "btn btn-outline-light me-2 text-bg-dark") %></p>
 <% end %>
 </div>
 <div class="modal-footer">
