--- a/app/views/users/_courses_page.html.erb
+++ b/app/views/users/_courses_page.html.erb
@@ -1,19 +1,71 @@
 <%if @param == '0'%>
-<h1>Текущие курсы</h1>
-<% k = 1%>
+<div class = "move_left"><h1>Текущие курсы</h1></div>
+    <div class="course__grid">
 <% @my_courses.where(status: false).each do |us_course|%>
 <% course = Course.find_by(id: us_course.course_id)%>
-  <%=k%>: <%= course.title %><br>
-    <%=link_to "Перейти в курс", "/courses/show/#{course.id}", class: "nav-link px-2", type: "button"%>
-    <% k+= 1%>
+    <div class="course__item">
+      <div class="course__categories">
+        <span class="category"><%=course.title[0..55]%></span>
+        <span class="course__free">Важный</span>
+      </div>
+      <div class="course__info">
+        <div class="course__title"><%= course.title%></div>
+        <div class="course__description">
+          <%= course.description%>
+        </div>
+      </div>
+      <div class="course__avatar">
+        <% if course.avatar.attached? %>
+          <%= image_tag(course.avatar, style:"width:150px; height:150px")%>
+        <%end%>
+      </div>
+      <div class="course__additional">
+        <div class="course__additionals">
+          <i class="material-icons">date_range</i>
+          <span class="additional">2 месяца</span>
+          <i class="material-icons">sports_soccer</i>
+          <span class="additional">Сертификат по программе</span>
+          <i class="material-icons">date_range</i>
+          <span class="additional">2 часа</span>
+        </div>
+    <%=button_to "Перейти в курс", "/courses/show/#{course.id}", method: :get, class: "btn btn-outline-light me-2 text-bg-dark"%>
+          </div>
+    </div>
 <%end%>
 <%else%>
-<h1> Пройденные курсы </h1>
+<div class = "move_left"><h1> Пройденные курсы </h1></div>
 <% k = 1%>
+    <div class="course__grid">
 <% @my_courses.where(status: true).each do |us_course|%>
 <% course = Course.find_by(id: us_course.course_id)%>
-  <%=k%>: <%= course.title %><br>
-    <%=link_to "Перейти в курс", "/courses/show/#{course.id}", class: "nav-link px-2", type: "button"%>
-    <% k+= 1%>
+    <div class="course__item">
+      <div class="course__categories">
+        <span class="category"><%=course.title[0..55]%></span>
+        <span class="course__free">Важный</span>
+      </div>
+      <div class="course__info">
+        <div class="course__title"><%= course.title%></div>
+        <div class="course__description">
+          <%= course.description%>
+        </div>
+      </div>
+      <div class="course__avatar">
+        <% if course.avatar.attached? %>
+          <%= image_tag(course.avatar, style:"width:150px; height:150px")%>
+        <%end%>
+      </div>
+      <div class="course__additional">
+        <div class="course__additionals">
+          <i class="material-icons">date_range</i>
+          <span class="additional">2 месяца</span>
+          <i class="material-icons">sports_soccer</i>
+          <span class="additional">Сертификат по программе</span>
+          <i class="material-icons">date_range</i>
+          <span class="additional">2 часа</span>
+        </div>
+    <%=button_to "Перейти в курс", "/courses/show/#{course.id}", method: :get, class: "btn btn-outline-light me-2 text-bg-dark"%>
+          </div>
+    </div>
 <%end%>
 <%end%>
+
