--- a/app/views/users/_role_page.html.erb
+++ b/app/views/users/_role_page.html.erb
@@ -1,9 +1,9 @@
 <%= form_with url: "/users/changing_role/#{user.id}", method: :post do |form| %>
  <p><%= form.label :role, "Выберите должность" %></p>
-          <%= form.radio_button :role, 0 %> Обычный сотрудник
-          <%= form.radio_button :role, 1 %> Наставник</p>
-          <%= form.radio_button :role, 2 %> Администратор</p>
-  <p><%= form.submit("Добавить", id: 'btn') %></p>
+          <p><%= form.radio_button :role, 0 %> Обычный сотрудник
+          <p><%= form.radio_button :role, 1 %> Наставник
+          <p><%= form.radio_button :role, 2 %> Администратор
+  <p><%= form.submit("Добавить", class: "btn btn-outline-light me-2 text-bg-dark") %></p>
 <% end %>
 </div>
 <div class="modal-footer">
