--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -7,7 +7,7 @@
 </div>
 <% if current_user != nil %>
   <div class = "btn-container">
-<%if UsersAndCourse.find_by(user_id: current_user.id, course_id: @course.id) == nil%>
+<%if CoursesUser.find_by(user_id: current_user.id, course_id: @course.id) == nil%>
     <%= form_with url: "/courses/sign/#{@course[:id]}", method: :post do |form| %>
     <button type="submit" class="btn btn-outline-light me-2 text-bg-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     Записаться на курс
@@ -44,6 +44,11 @@
     Убрать сотрудника из курса
     </button>
     <% end %> 
+    <%= form_with url: "/courses/destroy/#{@course.id}", method: :post do |form| %>
+    <button type="submit" class="btn btn-outline-light me-2 text-bg-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+    Удалить курс
+    </button>
+    <% end %> 
   </div>
 <%end%>
 <%end%>
@@ -59,7 +64,7 @@
   <div class = "lessons">Урок <%= les.number %>: <%= les.title%></div>
   <div class = "move_center">
 <% if current_user != nil %>
-<%if UsersAndCourse.find_by(user_id: current_user.id, course_id: @course.id) != nil%>  
+<%if CourseUser.find_by(user_id: current_user.id, course_id: @course.id) != nil%>  
   <div class="container">
     <%=button_to "Перейти в урок", "/lessons/show/#{les.id}", method: :get, class: "btn btn-outline-light me-2 text-bg-dark" %></button>
   </div>
